avoid automatic pojo serialization using reflection